k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegram-stock-bot
spec:
  selector:
    app: telegram-stock-bot
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
